syntax = "proto3";

package users;

import "commons.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string passwordHash = 4;
  int64 acsId = 5;
  string attendanceId = 13;
  string createdAt = 6;
  string updatedAt = 7;
  string deletedAt = 8;
  int32 version = 9;
  string createdBy = 10;
  string updatedBy = 11;
  int32 isActive = 12;
}

message UserProfile {
  string id = 1;
  string userId = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string avatarUrl = 6;
  string bio = 7;
  string dateOfBirth = 8;
  string address = 9;
  // HIS Employee fields
  string diploma = 17;
  int32 isDoctor = 18;
  int32 isNurse = 19;
  string title = 20;
  int64 careerTitleId = 21;
  int64 departmentId = 22;
  int64 branchId = 23;
  string defaultMediStockIds = 24;
  int64 genderId = 25;
  string ethnicCode = 26;
  string identificationNumber = 27;
  string socialInsuranceNumber = 28;
  string diplomaDate = 29;
  string diplomaPlace = 30;
  int32 maxServiceReqPerDay = 31;
  int32 doNotAllowSimultaneity = 32;
  int32 isAdmin = 33;
  // Base fields
  string createdAt = 10;
  string updatedAt = 11;
  string deletedAt = 12;
  int32 version = 13;
  string createdBy = 14;
  string updatedBy = 15;
  int32 isActive = 16;
}

message CreateUserInput {
  string username = 1;
  string email = 2;
  string password = 3;
  int64 acsId = 4;
  string firstName = 5;
  string lastName = 6;
  string phone = 7;
  string attendanceId = 8;
}

message UpdateUserInput {
  string id = 1;
  string email = 2;
  int64 acsId = 3;
  string attendanceId = 4;
}

message UpdateUserProfileInput {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string phone = 4;
  string avatarUrl = 5;
  string bio = 6;
  string dateOfBirth = 7;
  string address = 8;
  // HIS Employee fields
  string diploma = 9;
  int32 isDoctor = 10;
  int32 isNurse = 11;
  string title = 12;
  int64 careerTitleId = 13;
  int64 departmentId = 14;
  int64 branchId = 15;
  string defaultMediStockIds = 16;
  int64 genderId = 17;
  string ethnicCode = 18;
  string identificationNumber = 19;
  string socialInsuranceNumber = 20;
  string diplomaDate = 21;
  string diplomaPlace = 22;
  int32 maxServiceReqPerDay = 23;
  int32 doNotAllowSimultaneity = 24;
  int32 isAdmin = 25;
}

message UpdatePasswordInput {
  string id = 1;
  string password = 2;
}

message UserList {
  repeated User data = 1;
}

message UserWithProfile {
  User user = 1;
  UserProfile profile = 2;
}

// Device Token Management
message SaveDeviceTokenRequest {
  string userId = 1;
  string deviceToken = 2;
  string deviceType = 3;
  string deviceName = 4;
  string deviceOsVersion = 5;
  string appVersion = 6;
  string employeeCode = 7;
}

message SaveDeviceTokenResponse {
  bool success = 1;
}

message RemoveDeviceTokenRequest {
  string userId = 1;
  string deviceToken = 2;
}

message RemoveDeviceTokenResponse {
  bool success = 1;
}

message GetDeviceTokensRequest {
  string employeeCode = 1;
}

message GetDeviceTokensResponse {
  repeated string tokens = 1;
}

service UsersService {
  rpc FindAll (commons.Query) returns (UserList) {}
  rpc FindById (commons.Id) returns (User) {}
  rpc FindByUsername (commons.Name) returns (User) {}
  rpc FindByEmail (commons.Name) returns (User) {}
  rpc FindByAcsId (commons.Id) returns (User) {}
  rpc FindByIdWithProfile (commons.Id) returns (UserWithProfile) {}
  rpc SaveDeviceToken (SaveDeviceTokenRequest) returns (SaveDeviceTokenResponse) {}
  rpc RemoveDeviceToken (RemoveDeviceTokenRequest) returns (RemoveDeviceTokenResponse) {}
  rpc GetDeviceTokens (GetDeviceTokensRequest) returns (GetDeviceTokensResponse) {}
  rpc Count (commons.Query) returns (commons.Count) {}
  rpc Create (CreateUserInput) returns (User) {}
  rpc Update (UpdateUserInput) returns (User) {}
  rpc UpdateProfile (UpdateUserProfileInput) returns (UserProfile) {}
  rpc UpdatePassword (UpdatePasswordInput) returns (User) {}
  rpc Destroy (commons.Id) returns (commons.Count) {}
}
